--- a/javascript/package.json
+++ b/javascript/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
-    "react-datepicker": "^1.2.2",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.0",
+    "react-datepicker": "^1.4.0",
+    "react-dom": "^16.3.0",
     "react-scripts": "1.1.1"
   },
   "scripts": {
@@ -13,5 +13,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-jest": "^22.4.3",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "jest": "^22.4.3",
+    "react-test-renderer": "^16.3.0"
   }
 }
