--- a/javascript/package.json
+++ b/javascript/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "moment": "^2.22.0",
     "react": "^16.3.0",
