--- a/travis/requirements.txt
+++ b/travis/requirements.txt
@@ -1,10 +1,20 @@
 -i https://pypi.org/simple
+astroid==2.0.4
 certifi==2018.8.24
 chardet==3.0.4
-django==2.1.1
+django==2.1.2
 djangorestframework==3.8.2
 idna==2.7
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 psycopg2==2.7.5
+pylint-django==2.0.2
+pylint-plugin-utils==0.4
+pylint==2.1.1
 pytz==2018.5
 requests==2.19.1
-urllib3==1.23; python_version < '4'
+six==1.11.0
+typed-ast==1.1.0 ; python_version < '3.7' and implementation_name == 'cpython'
+urllib3==1.23
+wrapt==1.10.11
