--- a/travis/requirements.txt
+++ b/travis/requirements.txt
@@ -1,20 +1,21 @@
 -i https://pypi.org/simple
-astroid==2.0.4
-certifi==2018.8.24
+astroid==2.1.0
+certifi==2018.11.29
 chardet==3.0.4
-django==2.1.2
-djangorestframework==3.8.2
+django-cors-headers==2.4.0
+django==2.1.4
+djangorestframework==3.9.0
 idna==2.7
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
-psycopg2==2.7.5
-pylint-django==2.0.2
+psycopg2==2.7.6.1
+pylint-django==2.0.4
 pylint-plugin-utils==0.4
-pylint==2.1.1
-pytz==2018.5
-requests==2.19.1
+pylint==2.2.2
+pytz==2018.7
+requests==2.20.1
 six==1.11.0
 typed-ast==1.1.0 ; python_version < '3.7' and implementation_name == 'cpython'
-urllib3==1.23
+urllib3==1.24.1
 wrapt==1.10.11
