--- a/travis/requirements.txt
+++ b/travis/requirements.txt
@@ -1,21 +1,26 @@
 -i https://pypi.org/simple
+asn1crypto==0.24.0
 astroid==2.1.0
 certifi==2018.11.29
+cffi==1.11.5
 chardet==3.0.4
+cryptography==2.4.2
 django-cors-headers==2.4.0
+django-rest-knox==3.5.0
 django==2.1.4
 djangorestframework==3.9.0
-idna==2.7
+idna==2.8
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 psycopg2==2.7.6.1
-pylint-django==2.0.4
+pycparser==2.19
+pylint-django==2.0.5
 pylint-plugin-utils==0.4
 pylint==2.2.2
+pyopenssl==18.0.0
 pytz==2018.7
-requests==2.20.1
-six==1.11.0
-typed-ast==1.1.0 ; python_version < '3.7' and implementation_name == 'cpython'
+requests==2.21.0
+six==1.12.0
 urllib3==1.24.1
 wrapt==1.10.11
