--- a/javascript/package.json
+++ b/javascript/package.json
@@ -11,7 +11,7 @@
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1",
+    "react-scripts": "^2.1.3",
     "react-select": "^2.1.2"
   },
   "scripts": {
@@ -27,7 +27,8 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "flow-bin": "^0.89.0",
-    "react-test-renderer": "^16.6.3"
+    "jest": "^23.6.0",
+    "react-test-renderer": "^16.7.0"
   },
   "browserslist": [
     ">0.2%",
