--- a/javascript/package.json
+++ b/javascript/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.8.0",
     "moment": "^2.22.0",
     "react": "^16.6.3",
     "react-datepicker": "^2.0.0",
