--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
-language: python 
+language: python
 python:
-  - "3.6"
+  - "3.7"
 install:
-  - pip install -r travis/requirements.txt 
-script: 
-  - python manage.py test 
+  - pip install --user -r travis/requirements.txt
+script:
+  - python manage.py test
+
+services: postgresql
