--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "3.6"
 install:
-  - pip install --user -r travis/requirements.txt
+  - pip install -r travis/requirements.txt
 script:
   - python manage.py test
 
