--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ script:
   - python manage.py test
 
 services: postgresql
+
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
