--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ services: postgresql
 
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
+  - python manage.py makemigrations
+  - python manage.py migrate
