Upgrading postgres version

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,6 @@ before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
   - python manage.py makemigrations
   - python manage.py migrate
+
+addons:
+  postgresql: "9.4"
